--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/react-fontawesome": "^0.1.3",
     "bootstrap": "^4.1.3",
     "i": "^0.3.6",
+    "joi-browser": "^13.4.0",
     "lodash": "^4.17.11",
     "npm": "^6.4.1",
     "prop-types": "^15.6.2",
