--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,2 @@
-REACT_APP_API_URL=https://localhost:3900/api
+REACT_APP_API_URL=https://salty-brook-43236.herokuapp.com/api
+REACT_APP_API_URL_LOCAL=https://localhost:3900/api
